

=======
CHANGES
=======

[section="Removed Terrain"]
The old flowers on grassland terrain (Ggf) has been removed in favour of ^Efm, introduced during the 1.9 development series.
Maps containing the old terrain will no longer load.
[/section]

[section="Lua updated to 5.2"]
Lua interpreter was updated to 5.2
Some of the changes are not compatible, but still work due to the compatibility mode. The compatibility mode would be disabled after several minor releases, so it's best to rework the code according to http://www.lua.org/manual/5.2/manual.html#8
Some of the changes in interpreter are not compatible but don't have a compatibility mode.
[/section]

[section="CMake installation"]
Default man installation directory now confirms to FHS.
[/section]

[section="Clang defaults to strict compilation"]
The Clang compiler now also defaults to strict compilation when building with CMake. Also the default flags have changed to the ones used for GCC. This has only be tested with Clang 3.1, please file bug reports if it breaks older versions of Clang.
[/section]

[section="Under the Burning Suns"]
The campaign Under the Burning Suns has had extensive code changes.
While most of them should not be visible, there are several changes that affect difficulty.
[list]
[*] The first tunnel collapse in scenario 6b, "In the Domain of the Dwarves", no longer kills both guards.
[*] The AI behaviour for the messenger in scenario 8, "Out of the Frying Pan", has been much improved.
[*] The chest at the end of the cave in scenario 8 now grants more gold on easy difficulties than hard and the amount will always take you to positive gold.
[*] There are scattered small changes that make the hardest difficulty slightly harder.
[/list]
Players are encouraged to try these scenarios and comment on its difficulty.
[/section]

[section="Another Change"]
[/section]

==========
KNOWN BUGS
==========

[list][*] Text for entry1.
[*] Text for entry2.
[/list]