@@ -277,3 +277,23 @@ Use "ccmake .." to view a list of all build options with help texts.
 
 Debug builds:
 Set CMAKE_BUILD_TYPE to "debug"
+
+Compiler flags:
+CMake determines the compiler flags by combining CMAKE_CXX_FLAGS and
+CMAKE_CXX_FLAGS_<CMAKE_BUILD_TYPE>. If no CMAKE_BUILD_TYPE is specified only the
+CMAKE_CXX_FLAGS are used.
+
+The CMAKE_CXX_FLAGS are controlled by CMake and should not be set by the user.
+They are generated by the following parts:
+- CXX_FLAGS_PROJECT The default flags for all programs in the Wesnoth. These
+  flags are determined by the Wesnoth developers.
+- CXX_FLAGS_STRICT_COMPILATION The flags used for strict compilation. Whether
+  these flags are used depends on the configuration option
+  ENABLE_STRICT_COMPILATION.  When this option is changed the CMAKE_CXX_FLAGS
+  will be changed to reflect the change. (Starting from Wesnoth 1.11.0 the flag
+  can be changed after the initial generation.) What flags are set when choosing
+  this option is determined by the Wesnoth developers.
+- CXX_FLAGS_USER These flags set when configuring Wesnoth. The initial value of
+  this variable depends on the CXXFLAGS in the environment or defined by
+  -DCXX_FLAGS_USER. These flags are stored and can be changed later by running
+  ccmake and changing the value of CXX_FLAGS_USER.
