@@ -45,6 +45,10 @@ While most of them should not be visible, there are several changes that affect 
 Players are encouraged to try these scenarios and comment on its difficulty.
 [/section]
 
+[section="CMake compiler flags"]
+The part to determine the CMake compiler flags has been rewritten and now has better support for compiler specific enabling of targets. Therefore it is recommended to regenerate your CMake build.
+[/section]
+
 [section="Another Change"]
 [/section]
 
